--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,18 @@ buildscript {
 
         retrofit_version = '2.9.0'
         logging_interceptor_version = '4.9.0'
+
+        //reactive programing
+        kotlin_coroutines_version = "1.5.0"
+        lifecycle_version = "2.3.1"
+
+        //dependency injection
+        activity_ktx_version = "1.3.1"
+        fragment_ktx_version = "1.3.6"
+
+        //hilt
+        hilt_version = "2.38.1"
+        hilt_jetpack_version = "1.0.0-alpha03"
     }
 
     repositories {
@@ -31,6 +43,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
 
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
