--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,20 +12,19 @@
         android:theme="@style/Theme.MyForum">
         <activity
             android:name=".register.RegisterActivity"
-            android:exported="false" />
-        <activity
-            android:name=".login.LoginActivity"
+            android:theme="@style/Theme.MyForum.NoActionBar"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:exported="false"/>
+            android:name=".login.LoginActivity"
+            android:theme="@style/Theme.MyForum.NoActionBar"/>
+        <activity
+            android:name=".MainActivity"/>
     </application>
 
 </manifest>
