--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dicoding.myforum">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:name=".MyApplication"
         android:allowBackup="false"
@@ -12,17 +14,17 @@
         android:theme="@style/Theme.MyForum">
         <activity
             android:name=".register.RegisterActivity"
-            android:theme="@style/Theme.MyForum.NoActionBar"
+            android:theme="@style/Theme.MyForum.NoActionBar"/>
+        <activity
+            android:name=".login.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity
-            android:name=".login.LoginActivity"
-            android:theme="@style/Theme.MyForum.NoActionBar"/>
         <activity
             android:name=".MainActivity"/>
     </application>
