--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,16 +17,17 @@
             android:theme="@style/Theme.MyForum.NoActionBar"/>
         <activity
             android:name=".login.LoginActivity"
+            android:theme="@style/Theme.MyForum.NoActionBar"/>
+
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity
-            android:name=".MainActivity"/>
     </application>
 
 </manifest>
